[tool.poetry]
name = "numerology"
version = "1.0"
description = "Simple numerology tool to have fun with your friends."
authors =  ["Emmanuel GUENOU <emmanuel@compuute.io>", "Andrii KRAVCHUK <andrii@yakninja.pro>"] 
maintainers = ["Emmanuel GUENOU <emmanuel@compuute.io>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/compuuteio/numerology"
repository = "https://github.com/compuuteio/numerology"
documentation = "https://github.com/compuuteio/numerology/README.md"
keywords = ["numerology", "pythagorean", "vedic", "clairvoyance", "voyance"]
classifiers = [
    "Programming Language :: Python :: 3.7", 
    "Topic :: Games/Entertainment :: Fortune Cookies",
    "Topic :: Religion",
    "Topic :: Scientific/Engineering :: Mathematics"
]


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
robot = "^20071211"

[tool.poetry.scripts]
main = "main:start_app"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/compuuteio/numerology/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

